--- a/vagrant/ukff/Vagrantfile
+++ b/vagrant/ukff/Vagrantfile
@@ -7,11 +7,11 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.box = "netsensia/ubuntu-trusty64-salt"
 
-    config.vm.network "private_network", ip: "192.168.40.50"
+    config.vm.network :private_network, ip: "192.168.40.51"
 
     ["vmware_fusion", "vmware_workstation"].each do |vmware_provider|
       config.vm.provider vmware_provider do |v, override|
-        v.vmx["memsize"] = "4096"
+        v.vmx["memsize"] = "1024"
         v.vmx["numvcpus"] = "1"
       end
     end
